Fix info panels not correctly wrapping and flexing

--- a/style.css
+++ b/style.css
@@ -98,9 +98,10 @@ body{
 .info-panels {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    width: 10px;
+    justify-content: center;
+    flex-basis: 10px;
     gap: 40px;
+    flex-wrap: wrap;
 }
 
 .info-title {
@@ -112,6 +113,7 @@ body{
 }
 
 .info-text {
+    max-width: 150px;
     font-size: 18px;
     color: #1F2937;
     text-align: center;
@@ -119,7 +121,7 @@ body{
 }
 
 .info-image {
-    width: 150px;
+    max-width: 150px;
     border: 5px;
     border-style: solid;
     border-color: #3882F6;
